<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">关于</string>
    <string name="about_message">This software uses map data provided by OpenStreetMap.org</string>
    <string name="about_title">关于我们</string>
    <string name="activate_vip">开通VIP</string>
    <string name="activate_vip_tip_1">此功能需要VIP才能使用，是否去开通VIP？</string>
    <string name="activate_vip_tip_2">开通VIP立即解锁无限多开等权益，是否去开通VIP？</string>
    <string name="activity_choose_location">地点选择</string>
    <string name="activity_location_settings">虚拟地理位置</string>
    <string name="ad_tip">"\u0009\u0009普通用户相同应用免费多开一个，开通VIP可无限多开，并解锁更多VIP专属功能！

"</string>
    <string name="add_account_button_label">Add account</string>
    <string name="add_app">添加App</string>
    <string name="add_floating_window">浮窗</string>
    <string name="add_new_email">添加新邮箱</string>
    <string name="add_new_phone">添加新手机号</string>
    <string name="agc_02CAC09AC82718922B7A47188A3EF7CB928CA8D0EBE456FE3A763223DC25E33E">005F341A67E7C0FA05E5DB3D2DDE6280926D65127424563DFAE7C0B63B8896901CF1C1267E8B938E28D047CFDD527D8BDFE7C2981B4DB971F780380358E7CC1FB4</string>
    <string name="agc_039385256A8E064A3FBA0E5DC382B8F03961789D7A12A9D0BB248FFEDD6D1470">00E1466AF69F07C6E889C53A95B5B91874EFC5FB92E0DBE6B9F12AA6FB393FB698ADC58198A1D060A564B23CA4672C6C073D6294EB5221512B4509B59D252B740A6F4C980474436E0A6C92423BF4082893</string>
    <string name="agc_0692DAD5D21427E7CCE627E8DC1ED71FDB307EBDC4DFB3A554BC60FCCE38E034">00B1CF72BF5521C60ECE4ADF034D5B0892DB640503E9390517D8EABB24DDE65C85C26ABA4F915F91DE346EF9F25F7A7244F7AEB842298C83D93F6AF0A7B22C361E</string>
    <string name="agc_0DC3A56C1AC03D404A409264B0AED075A38F9EB082F5057704EA33D4B5B9B9C9">0053719AEC1016F22AD644DF88AFE06FB95B0EF1E6116383ECCED9FB1003D175D1963F57D671FCE4F83099B4CFBA31BD7B9896FB7E18CAF6411804C02B218BC3DB30DEE66FA9F1047AD82D72B7648ED94386089D8BBCD1787476F16B1E217993A2</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">00F76362A87CF9DFFA2FF7E933B8CD8EB9786D261A801A821C11C1605A17C4C5959788794B7872B05E86ABC88939D2DF0101444F075EF353B794F5470F580DE8BBD53B168F811125CC8DB4C8CC083998D051785C87D62F18FEEA072212D64A7B93</string>
    <string name="agc_1DAF2070F644F3B6CEA88178D5DA98CE4A7A380B545F415B1A228519B1E134C8">00DF1D632476C1CE0ECBECB4E8A9986B606EBB73736DF6AD065FDC62826A53416880C45B09A1563EECD15BF1B70B2AEDD6</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">F70A902CAFB156F03F4D664E366A6028</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">00C4F3A1EB7BE5436E003D174127A3250B447BC784BD6640194F116ED601E1CA59</string>
    <string name="agc_346F273384FE025F17324187A93E7E3BFB08DD081290E00F942EE066625A31DD">00428672EEA0F8D11BFDF8923BFBA89764A8ADC889F2C46FF648D9624974CC5E773A8A0C99730D83926E4FABB7BEE9D521</string>
    <string name="agc_35623988AD86DCDA34F1257D6E93F34177702C6302115D897E60D38E0816CD35">00F3820997F120124FCF3255394350357525C4B19BBF4435B4033D712039B04BB2ACEDABA840B2750533D27509A59BF500</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">00E348F88EA7751D8BE65453063B29CF0CC62933D4B0F1E4104A86D597B86B438470F9F2232DA1A6A94D26DB9512C2D32A</string>
    <string name="agc_3D7A0A63AA0374539D58FF4B3034CF00D2353E3A780A0F85C35566E329358934">009C080EE15C27EF71796A740BF943672EA6B4D33E70A0DD0523A2F2C1DD9B45DC08AACAAAF476F48AF4A8B9FD2CFA1800900EFBD1327A964CA81E056B92EA8B3AD8164F7241A207ACCC1914818EC5FC69AC2DEC8A6A18286C7C26A22305E0FFC9</string>
    <string name="agc_3FC6CD8093B4922272D7E36E11F6576A13C3767B8DFE7E7C806E0B096B233E18">00652F3C169E0176DFE42CBE25632FD8949834F5E2E6158158AF9B82F0B465013B8BDB238C86E1A66DA01B7AAD0E30CE10</string>
    <string name="agc_42CFA4FE0F87541B3B3F9793F5D829BE381703BB99853CCC25D018996F251536">0068174A558C621C54D7B43E1759DDA535BA3450CD810A532FCDA3B296D412D412</string>
    <string name="agc_432BA784B7D2E3A6C73AB69659D3300DC6258E318543A10B50EA4B770C67DAB3">0030EE863FE87CEEBF281E64262DE1BCF86A04F33F3AB98427CF4EA28EB11C6BEA867C451DE4E6EBBAB92151B7FC67950B1613CA024DDF8A32C1D1ACC3D74D7441</string>
    <string name="agc_4A1001369614B0D938752C6AB4967DE352A3ADD13CAE741A7DF78EE728F74136">00B36C2968D1FB5E7588A335A070173B9EA3B71F6BF630E6861C3E5E602BF41245</string>
    <string name="agc_4D79CE1E9E81D44FFC3CBFEC80D073F18409AAC96E2DAFB11951005E99B02EDB">0054196BC3CCD7C0807F8D1D90039371992143F0863650804F58670FBAC1A92A0038B8C59A40234E5C4C8A8EB070809BB321FAFE1602FED13D6BFE3ADB16349368</string>
    <string name="agc_4E59F3D37D339A997CACA4A0C457DAA94A1F044555D950F1F9835B0B6F600D38">00FC999F5D8DD28488373D7D1BC0B12F904B0BF17E931B1A5C0EC93B10E7400B33</string>
    <string name="agc_52C6C717F2BEA9936D7DEDC27E412B9E7AC9A6642A6D0AEE353B2B14737100F5">00ABB15FDBBF3074AF5E8BB63A4F30EEF5811AEF8B3CA098E5A6E4017F94D46C81CA2EED1D4EBD3B3A6DFC1ED8FFF78C8C</string>
    <string name="agc_55A14C88686718883C90D427958F540EC05210E430ED915D772D8F34C350D08B">00D23D6FF3181D887F9863C6C606191F718A0BE4C4875A96B0D367AC59E102899EA263938C17C5FA36DEB7606DB231A03999C8098884499B25851361B2CDF36A23</string>
    <string name="agc_56BB9FCDF7DAFDC12F18BE8BF765769B14E090D615353A1FF24238CC17EF2F2F">00FBB882637A1F0AA7A8EBBC3522ED3871A1CCC619C0E655DBE7C720ABD8E4D9514FC42510E457EBB4AA8678B3A2858D0253728F42BE4BDF2B09CAC41219293097</string>
    <string name="agc_5B1EF301F6E8D26793B9699E972C1FE3B4563543360C2A380F9C42CED9967B7B">0041690120DCD5F06885E76A5B129707631C57D834E01DEDD396E683662DEDB50CFD3FD908B24EA86B9EF37DE6C9171BDB671BD6098A64EE91262F1ADC2E136562BCD580F0B9579E134D68B4645CC61F47538CD28262A88B2603784F087CAD1DAD</string>
    <string name="agc_5B5AF298A58B98DB86A04DB0E3B1924F7EAC7A14CA781F042E5F999BD413CC9E">002DC85F114D3CFAED038EE800DC650080A9820F1B2FE9A73E5D4EADB1AF9C7C4088AD99747B140B93C63BB108F86E005A</string>
    <string name="agc_63F3255D837430EC4C799B2B5A8091A554A101C6FAC114907463E723AF33B544">00DD8A0A4FEA7A157CA2316DCC024636CC8BE124922F10A5EC2290D3AA860AD31046C3E733B17FE702373C85AD5D4C1CE25005FA64AD294B77BBDAD6B26B25A42A72C23FAF89C87F03829FA7813E082E5E5E3C7AE7690BC61DF954560F5826EC962B9AD0564D71CE6FB99CDC88E402D8AFBFF985FB94C80E20B6D6AE847335F34DFE5FD7DF9F0221C3A2EAAF39C875FF0F045032EA7E8770173D229C0E91CA79AF22521AA72D9F1D079B6006B374F67DFC50CF541AF20CB44C5D11ADC579A0FAA87AAEFD8DD23ADE13F270CD680FA79A01BF88F3C21872535B4BE992A584426871</string>
    <string name="agc_66412D70318648FA3BDD00A3CB2E73EE439F788EBA8010232B3B145A1ADE18F4">00F96D2A9F6672E122B496FC630D909A85FB951990970F4CD01F085A093E97A9F5B0E0B57B8D3D58DB74869B6B2BC9D233</string>
    <string name="agc_69589FA8E5257AA8E3C477503B5586F4B4981C77F69B612318E3FC7AF1B00890">00876F77DF60B18544B1503A39D3CCF94D4B1B4CAE5B7086210A90427480D9C6CEBA7744CD67EFB5D9FDF312124F775784</string>
    <string name="agc_6D239E4C2FF1354F6DBB62ED715B0B2A4058A2C1B368EB9F5FAF8B457ED28FA6">00333FFACE91EFE238149A4710FC91AED294116F5515FA8A99A6C96A688CDA143B4851F87A22A23103D797EF12CF78503C9539EF71C416AACD41F8CC3DBD275CFC</string>
    <string name="agc_6DC2F1E7B3508CE97B8A34B184EAD19FADAAC83160422DE0BA2F78B0438C6A98">00D580D586FFBD4EB26FA6A5385EFA60A7861D4E5852F8F163DE2DE0E12BD621D9A46BF7CAAE1040636EAC203D17BA2AE3</string>
    <string name="agc_7946AE46AB6C7F8CBDCAF61B99109C7C5309E95125FEA7458FBF603EC34F79F0">0055986D8CC2BF801653D216F778CFC5CA697846E210C9B88418077A1318BE406F</string>
    <string name="agc_7AE336DAB422A03E8E8A5A88C60ACA96939FAAC47AFC07F2870F0CAD9FB9C952">004F8CFA2BFE4BE3DC40345C250CA60144AA12A5A103FD6E5226926CCB1A835CFFDCA6493A71BCD0A01BD67792E026ACED2F136A3DE2A6414ED8B523BC452EBC67</string>
    <string name="agc_82EF8D63B2BE36159522C21C4D086D73D713FEEEE73A9F1FAF569DFCE12A4EAD">00480066C11517451848A9063710E19CC42FAEDB5FA855635BD6FC80173DE2EB61C29C953A446E63D866394339C0C2AAF87EABA63534E689DDFD6A6AB61A29F717</string>
    <string name="agc_836CE23119A6E21FA622B66B25341D1D32735FAA2839B33D60C4D59B7AD62151">00BBE40C23A2CF71FBEEE1D932ACF9B568FBA3E5D9287578AE7A1440ED6860D16210A37A7A1A62552E53DCC9D005876047C9053377F0A1DD51EE31E58A955DE6B2</string>
    <string name="agc_840FE2348B9312C51373EFB2E2F030D10C43688DDE98467C8DD63AC7DC1855AB">0084CE1121C6D96D87318757023DEC0A1BDF9FB8E895CC37C2518AEC3778EE89E5</string>
    <string name="agc_864E57EAF6D5DB70BE861700AFF6C17A93A9D202732BCB4048B0CDBB6EBF578F">004E65A35E0E205B89DEB67BD140D1030ACE4EAFFE278AC75C29707CC07D54DD2D977596BD708F6D768500D64361A72480C86FB7A99FD60E4F1A815F3EB1666BF9</string>
    <string name="agc_8CBEB54DD45F5D2D07C517A93D2C07AC37E088876F07FDDF2D74CEFF5500AE68">00B8930A720580EACCA465667AFB18555EE94B1BD6A1E63640195D550C5AC389FA105F4F2F1DDC2900BC37849588CABB5E</string>
    <string name="agc_8EC943399EB9730C69A7B8E4E46D24911E8F900AC2F52A3DF251327694CD8EFA">001286AD157F9788B858AB6D62EC6CF98CA14B744184BCB79F6EF62EEDB660687921B6921094AAC915B96DF528EF57C50E7D01DCFAFF566C1370710A60AC819A3B</string>
    <string name="agc_921057513A7C8EA60A9AB168E9BE65F5A2A40F47A2725FF4CDDC8793353BD4D3">00182F716E95726BD54A4FA64D57761A3405922C23B982659EA1B72A7AB7D0875941CEF3AED6833CE62341DB4FCEAB7679856973F12F008C9669DF590C923C09F7</string>
    <string name="agc_943F28EFD067BBA193A2BABED8B2DCC2AB346B483A7A7FFE4EEF97B6A6E8E95B">00B5A7BC761B1FABE5CBE6012BFABB1205C698B0DAEAE117F85F52E5BDFC66309605A1E32464B5905827BDE879EE2B4893</string>
    <string name="app_name">元气多开</string>
    <string name="cancel_msg">取消</string>
    <string name="confirm">确认</string>
    <string name="create_shortcut">创建快捷方式</string>
    <string name="delete">删除</string>
    <string name="hint_lat">经度</string>
    <string name="hint_lng">纬度</string>
    <string name="menu_delete">删除</string>
    <string name="menu_note">备注</string>
    <string name="menu_pwd">应用锁</string>
    <string name="menu_quick_clone">快捷添加</string>
    <string name="menu_sort">排序</string>
    <string name="no_app_tip">"点击右上角 '+' 添加应用"</string>
    <string name="permission_tips_confirm">同意</string>
    <string name="refuse">拒绝</string>
    <string name="save">保存</string>
    <string name="set_note">设置备注</string>
    <string name="tip_delete">注意</string>
    <string name="title_input_location">手动输入位置</string>
</resources>