<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/menu_white_bg" android:layout_width="300.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/holo_red_dark" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tip_delete" app:layout_constraintBottom_toBottomOf="@id/iv_close" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/iv_close" />
    <ImageView android:id="@id/iv_close" android:padding="15.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:src="@mipmap/ic_close" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="15.0sp" android:textColor="@color/gray3" android:gravity="center_vertical" android:id="@id/delete_msg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="25.0dip" android:layout_marginRight="20.0dip" android:layout_marginHorizontal="20.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title" />
    <com.google.android.material.button.MaterialButton android:textSize="15.0sp" android:textColor="@color/cancel_tx_color" android:gravity="center" android:id="@id/btn_cancel" android:layout_width="120.0dip" android:layout_height="40.0dip" android:layout_marginTop="28.0dip" android:layout_marginBottom="15.0dip" android:text="@string/cancel_msg" android:insetTop="0.0dip" android:insetBottom="0.0dip" android:layout_marginStart="20.0dip" android:backgroundTint="@color/cancel_color" app:cornerRadius="5.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/delete_msg" />
    <com.google.android.material.button.MaterialButton android:textSize="15.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_confirm" android:layout_width="120.0dip" android:layout_height="40.0dip" android:text="@string/confirm" android:insetTop="0.0dip" android:insetBottom="0.0dip" android:layout_marginEnd="15.0dip" android:backgroundTint="@color/confirm_color" app:cornerRadius="5.0dip" app:layout_constraintBottom_toBottomOf="@id/btn_cancel" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/btn_cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>