<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_white" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/black3" android:layout_gravity="center_horizontal" android:id="@id/tv_title" android:paddingTop="10.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/title_input_location" />
    <FrameLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginBottom="10.0dip">
        <androidx.appcompat.widget.AppCompatEditText android:textSize="14.0sp" android:textColor="@color/black2" android:textColorHint="@color/gray2" android:gravity="center" android:id="@id/edt_lat" android:background="@drawable/gray_rect" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:hint="@string/hint_lat" android:lines="1" android:singleLine="true" android:inputType="numberDecimal" android:imeOptions="actionNext" />
    </FrameLayout>
    <FrameLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginBottom="10.0dip">
        <androidx.appcompat.widget.AppCompatEditText android:textSize="14.0sp" android:textColor="@color/black2" android:textColorHint="@color/gray2" android:gravity="center" android:id="@id/edt_lon" android:background="@drawable/gray_rect" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:hint="@string/hint_lng" android:lines="1" android:singleLine="true" android:inputType="numberDecimal" android:imeOptions="actionDone" />
    </FrameLayout>
    <View android:background="@color/gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip">
        <TextView android:textColor="@android:color/black" android:gravity="center" android:id="@id/btn_cancel" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@android:string/cancel" android:layout_weight="1.0" />
        <View android:background="@color/gray" android:layout_width="1.0px" android:layout_height="fill_parent" />
        <TextView android:textColor="@android:color/black" android:gravity="center" android:id="@id/btn_ok" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@android:string/ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>