<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:background="@drawable/dialog_white_bg" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="300.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/lay_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <ImageView android:id="@id/iv_warn" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_warn_tip" android:layout_marginEnd="10.0dip" />
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/gray3" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_note" app:layout_constraintBottom_toBottomOf="@id/iv_close" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/iv_close" />
    </LinearLayout>
    <ImageView android:id="@id/iv_close" android:padding="15.0dip" android:layout_width="50.0dip" android:layout_height="50.0dip" android:src="@mipmap/ic_close" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ScrollView android:id="@id/scroll" android:layout_width="fill_parent" android:layout_height="200.0dip" android:layout_marginTop="25.0dip" android:layout_marginBottom="25.0dip" app:layout_constraintBottom_toTopOf="@id/btn_refuse" app:layout_constraintTop_toBottomOf="@id/lay_title">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="15.0sp" android:textColor="@color/black3" android:gravity="center_vertical" android:id="@id/tv_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginHorizontal="20.0dip" app:layout_constraintTop_toBottomOf="@id/lay_title" />
            <TextView android:textSize="15.0sp" android:textColor="@color/black3" android:gravity="center_vertical" android:id="@id/tv_content_other" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="20.0dip" android:layout_marginHorizontal="20.0dip" />
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.button.MaterialButton android:textSize="15.0sp" android:textColor="@color/cancel_tx_color" android:gravity="center" android:id="@id/btn_refuse" android:layout_width="120.0dip" android:layout_height="40.0dip" android:layout_marginBottom="15.0dip" android:text="@string/refuse" android:insetTop="0.0dip" android:insetBottom="0.0dip" android:layout_marginStart="20.0dip" android:backgroundTint="@color/cancel_color" app:cornerRadius="5.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/scroll" />
    <com.google.android.material.button.MaterialButton android:textSize="15.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_confirm" android:layout_width="120.0dip" android:layout_height="40.0dip" android:text="@string/permission_tips_confirm" android:insetTop="0.0dip" android:insetBottom="0.0dip" android:layout_marginEnd="15.0dip" android:backgroundTint="@color/confirm_color" app:cornerRadius="5.0dip" app:layout_constraintBottom_toBottomOf="@id/btn_refuse" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/btn_refuse" />
</androidx.constraintlayout.widget.ConstraintLayout>